<resources>
    <string name="app_name">Comic Buzz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <string name="issue_cover_image">Issue Cover Image</string>
    <string name="published_on">Published On : </string>
    <string name="volume">Volume : </string>
    <string name="issue_number">Issue Number : </string>
    <string name="count_of_issues">Count Of Issues : </string>
    <string name="start_year">Start Year : </string>
    <string name="publisher">Publisher : </string>
    <string name="date_published">Date Published : </string>
    <string name="character_cover_image">Character Cover Image</string>
    <string name="volume_cover_image">Volume Cover Image</string>
    <string name="gender">Gender : </string>
    <string name="real_name">Real Name : </string>
    <string name="count_of_issue_appearances">Count of Issue Appearances : </string>
    <string name="issue_details_fragment_image_view">Issue details fragment image view</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="volume_detail_main_image">Volume Detail Main image</string>
    <string name="character_detail_main_image">Character detail main image</string>
    <string name="my_favourites_main_image">my favourites main image</string>
    <string name="character_s_enemies">Character\'s Enemies :</string>
    <string name="character_s_friends">Character\'s Friends :</string>
    <string name="creators">Creators :</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="tavish_jain">Tavish Jain</string>
    <string name="jaintavish_gmail_com">jaintavish@gmail.com</string>
    <string name="new_issue_releases">New Issue Releases</string>
    <string name="origin">Origin</string>
    <string name="issues">Issues</string>
    <string name="volumes">Volumes</string>
    <string name="characters">Characters</string>
    <string name="my_favourites">My Favourites</string>
    <string name="more">More…</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="background_image_detail_activity">Background Image Detail Activity</string>
    <string name="gender_male">Gender : Male</string>
    <string name="gender_female">Gender : Female</string>
    <string name="gender_other">Gender : Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string name="error_getting_data">Error Retrieving data !!</string>
    <string name="failed">Failed</string>
    <string name="not_available">Not Available</string>
    <string name="database_name">IssueDB</string>

    <string name="added_to_favs">Added To Favourites !!!</string>
    <string name="deleted_from_favs">Deleted From Favourites !!</string>


</resources>
