<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_issue"
            android:icon="@drawable/ic_issue"
            android:title="@string/issues" />
        <item
            android:id="@+id/nav_volumes"
            android:icon="@drawable/ic_volumes"
            android:title="@string/volumes" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_characters"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_my_favs"
            android:icon="@drawable/ic_my_favs"
            android:title="@string/my_favourites" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_about_me"
                android:title="@string/about_the_developer" />
        </menu>
    </item>

</menu>
