<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/card_view_layout_character"
        android:orientation="vertical"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_character_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/character_cover_image" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:ellipsize="end"
                android:id="@+id/tv_character_name"
                android:maxLines="2"
                android:textSize="25sp"
                tools:text="Character Name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/origin"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:text="@string/gender"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:id="@+id/tv_birth"
                    android:ellipsize="end"
                    tools:text=""/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:id="@+id/tv_gender"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:layout_weight="1"
                    tools:text=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/real_name"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/count_of_issue_appearances"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:id="@+id/tv_real_name"
                    android:ellipsize="end"
                    tools:text=""/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/tv_count_of_appearances"
                    android:ellipsize="end"
                    tools:text=""/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>