<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/volume_detail_main_image"
        android:scaleType="fitXY"
        android:id="@+id/iv_volume_detail_main_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_volume_detail_volume_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:textColor="#FFFFFF"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Volume Name" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardElevation="1dp"
                app:contentPadding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_volume_detail_volume_name">

                <ImageView
                    android:id="@+id/iv_volume_detail_image_view"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:adjustViewBounds="true"
                    android:minHeight="180dp"
                    android:contentDescription="@string/issue_details_fragment_image_view"
                    app:layout_collapseMode="parallax"
                    android:paddingTop="0dp"
                    android:scaleType="fitCenter" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_volume_detail_no_of_issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:background="#80000000"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_volume_detail_publisher"
                tools:text="No. of issues" />

            <TextView
                android:id="@+id/tv_volume_detail_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:background="#80000000"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:text="publisher" />

            <TextView
                android:id="@+id/tv_volume_detail_start_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:background="#80000000"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_volume_detail_no_of_issues"
                tools:text="start year" />

            <TextView
                android:id="@+id/tv_volume_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:background="#80000000"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_volume_detail_start_year"
                tools:text="Description" />

            <TextView
                android:id="@+id/tv_volume_detail_character_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#80000000"
                android:text="@string/characters"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_volume_detail_description" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>